--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
   body {
     font-family: "Poppins", sans-serif;
     background-color: #ebf4fa;
+    margin: 0;
   }
   
   .wrapper {
@@ -118,7 +119,8 @@ html {
   .bio-section {
     display: flex;
     align-items: center;
-    margin-top: 7rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
   }
 
   .my-bio {
@@ -133,17 +135,17 @@ html {
   .my-bio p {
     font-size: 1rem;
   }
-  
-  .services h2 {
-    text-align: center;
+
+  .portfolio h2 {
+    text-align: left;
     text-transform: uppercase;
     color: #F95353;
     border-radius: solid 2px 4px #f95353;
     font-weight: bold;
-    font-size: 2.5rem;
-    margin-top: 10rem;
-    margin-bottom: 5rem;
-  }
+    font-size: 2rem;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+  }  
   
   .gal-container {
     display: flex;
@@ -155,7 +157,7 @@ html {
     flex-direction: column;
     width: 30%;
     background-color: rgb(255, 255, 255);
-    text-align: center;
+    text-align: left;
     border-bottom: solid #F95353 5px;
   }
   .service-container h3 {
@@ -163,5 +165,17 @@ html {
   }
   .service-container p {
     margin-bottom: 2rem;
+  }
+
+  footer {
+    background-color: darkgrey;
+    padding: 1rem;
+    margin-top: 10rem;
+  }
+
+  footer h4 {
+    text-align: center;
+    font-size: 0.7rem;
+    margin: 0;
   }
   
